corrected positioning on safari

--- a/sass/media.scss
+++ b/sass/media.scss
@@ -178,7 +178,7 @@ nav{
 	img{
 		opacity: .2;
 		position: absolute;
-		height: 100%
+		height: 100%;
 	}
 }
 }
